Add resend email integration

--- a/blog.html
+++ b/blog.html
@@ -15,6 +15,20 @@
     <title>Cyber Blog - AI Art & Tech Insights | Prompt Generator</title>
     <meta name="description" content="Latest insights on AI art, cyberpunk culture, and prompt engineering. Stay updated with the future of digital creativity.">
     <meta name="keywords" content="AI art blog, cyberpunk culture, prompt engineering, AI creativity, digital art">
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://prompts.oddesthistory.com/blog">
+    <meta property="og:title" content="Cyber Blog - AI Art & Tech Insights | Prompt Generator">
+    <meta property="og:description" content="Latest insights on AI art, cyberpunk culture, and prompt engineering. Stay updated with the future of digital creativity.">
+    <meta property="og:image" content="https://prompts.oddesthistory.com/3prompt.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://prompts.oddesthistory.com/blog">
+    <meta property="twitter:title" content="Cyber Blog - AI Art & Tech Insights | Prompt Generator">
+    <meta property="twitter:description" content="Latest insights on AI art, cyberpunk culture, and prompt engineering. Stay updated with the future of digital creativity.">
+    <meta property="twitter:image" content="https://prompts.oddesthistory.com/3prompt.png">
     <link rel="icon" type="image/png" href="favicon.png">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     <link rel="apple-touch-icon" href="favicon.png">
