--- a/generator.html
+++ b/generator.html
@@ -16,6 +16,20 @@
     <meta name="description" content="Advanced AI prompt generator with 10 categories and 40,000+ combinations. Create custom prompts for Midjourney, DALL-E, and Stable Diffusion.">
     <meta name="keywords" content="AI prompt generator, Midjourney prompts, DALL-E prompts, cyberpunk prompts, AI art generator, prompt engineering">
     <meta name="author" content="Prompt Generator">
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://prompts.oddesthistory.com/generator">
+    <meta property="og:title" content="AI Prompt Generator Tool - Create Custom AI Image Prompts">
+    <meta property="og:description" content="Advanced AI prompt generator with 10 categories and 40,000+ combinations. Create custom prompts for Midjourney, DALL-E, and Stable Diffusion.">
+    <meta property="og:image" content="https://prompts.oddesthistory.com/2prompt.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://prompts.oddesthistory.com/generator">
+    <meta property="twitter:title" content="AI Prompt Generator Tool - Create Custom AI Image Prompts">
+    <meta property="twitter:description" content="Advanced AI prompt generator with 10 categories and 40,000+ combinations. Create custom prompts for Midjourney, DALL-E, and Stable Diffusion.">
+    <meta property="twitter:image" content="https://prompts.oddesthistory.com/2prompt.png">
     <link rel="icon" type="image/png" href="favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
