--- a/index.html
+++ b/index.html
@@ -17,6 +17,20 @@
     <meta name="keywords" content="AI prompt generator, Midjourney prompts, DALL-E prompts, cyberpunk prompts, AI art generator, prompt engineering">
     <meta name="author" content="Prompt Generator">
     <meta name="google-site-verification" content="UqiP5kuv3yinAa6QMWOxyIc4r5C3Nbowiu7CtOog9c8" />
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://prompts.oddesthistory.com/">
+    <meta property="og:title" content="AI Prompt Generator - Create AI Art Prompts with a Difference | Free Tool">
+    <meta property="og:description" content="Generate millions of unique AI image prompts for Midjourney, DALL-E, and Stable Diffusion. Free cyberpunk prompt generator with 40,000+ combinations.">
+    <meta property="og:image" content="https://prompts.oddesthistory.com/1prompt.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://prompts.oddesthistory.com/">
+    <meta property="twitter:title" content="AI Prompt Generator - Create AI Art Prompts with a Difference | Free Tool">
+    <meta property="twitter:description" content="Generate millions of unique AI image prompts for Midjourney, DALL-E, and Stable Diffusion. Free cyberpunk prompt generator with 40,000+ combinations.">
+    <meta property="twitter:image" content="https://prompts.oddesthistory.com/1prompt.png">
     <link rel="icon" type="image/png" href="favicon.png">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <style>
