--- a/resources.html
+++ b/resources.html
@@ -14,6 +14,20 @@
     </script>
     <title>Resources - AI Art & Tech Tools | Prompt Generator</title>
     <meta name="description" content="Curated resources for AI art, prompt engineering, and tech tools">
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://prompts.oddesthistory.com/resources">
+    <meta property="og:title" content="Resources - AI Art & Tech Tools | Prompt Generator">
+    <meta property="og:description" content="Curated resources for AI art, prompt engineering, and tech tools">
+    <meta property="og:image" content="https://prompts.oddesthistory.com/4prompt.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://prompts.oddesthistory.com/resources">
+    <meta property="twitter:title" content="Resources - AI Art & Tech Tools | Prompt Generator">
+    <meta property="twitter:description" content="Curated resources for AI art, prompt engineering, and tech tools">
+    <meta property="twitter:image" content="https://prompts.oddesthistory.com/4prompt.png">
     <link rel="icon" type="image/png" href="favicon.png">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <style>
