--- a/terms.html
+++ b/terms.html
@@ -14,6 +14,20 @@
     </script>
     <title>Terms of Service - Prompt Generator</title>
     <meta name="description" content="Terms of Service for the AI Prompt Generator tool">
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://prompts.oddesthistory.com/terms">
+    <meta property="og:title" content="Terms of Service - Prompt Generator">
+    <meta property="og:description" content="Terms of Service for the AI Prompt Generator tool">
+    <meta property="og:image" content="https://prompts.oddesthistory.com/5prompt.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://prompts.oddesthistory.com/terms">
+    <meta property="twitter:title" content="Terms of Service - Prompt Generator">
+    <meta property="twitter:description" content="Terms of Service for the AI Prompt Generator tool">
+    <meta property="twitter:image" content="https://prompts.oddesthistory.com/5prompt.png">
     <link rel="icon" type="image/png" href="favicon.png">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <style>
