--- a/unsubscribe.html
+++ b/unsubscribe.html
@@ -14,6 +14,20 @@
     </script>
     <title>Unsubscribe - Prompt Generator</title>
     <meta name="description" content="Unsubscribe from Prompt Generator newsletter">
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://prompts.oddesthistory.com/unsubscribe">
+    <meta property="og:title" content="Unsubscribe - Prompt Generator">
+    <meta property="og:description" content="Unsubscribe from Prompt Generator newsletter">
+    <meta property="og:image" content="https://prompts.oddesthistory.com/6prompt.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://prompts.oddesthistory.com/unsubscribe">
+    <meta property="twitter:title" content="Unsubscribe - Prompt Generator">
+    <meta property="twitter:description" content="Unsubscribe from Prompt Generator newsletter">
+    <meta property="twitter:image" content="https://prompts.oddesthistory.com/6prompt.png">
     <link rel="icon" type="image/png" href="favicon.png">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <style>
